# jenkins-jobs-credentials

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  development-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
jenkins_jobs_credentials/: properties.py
tests/properties/: test_properties.py
tests/properties/fixtures/: folder_credential.xml  folder_credential.yaml
