[metadata]
name=jenkins-jobs-credentials
classifiers=
        Programming Language :: Python
author=Jean-Francois Roche
author_email=jfroche@affinitic.be
license=BSD

[pbr]
warnerrors = True

[entry_points]
jenkins_jobs.properties =
    folder_credential=jenkins_jobs_credentials.properties:folder_credential

[easy_install]
zip_ok = false

[flake8]
ignore = E123,E127,E121
# E123: closing bracket must match indent of starting bracket
# E127 continuation line over-indented for visual indent
# E121 continuation line indentation is not a multiple of four

[aliases]
dev = develop easy_install jenkins-jobs-credentials[test,development]

[files]
packages =
    jenkins_jobs_credentials
